--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "bootstrap-sweetalert": "^1.0.1",
         "bootstrap-vue": "^2.0.0-rc.28",
         "date-fns": "^1.30.1",
         "vue-router": "^3.1.2",
